<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="10dp">

    <TextView
        android:id="@+id/tv_result" android:visibility="gone"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <TextView
        android:text="@string/username" android:layout_below="@id/tv_result"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/tv_label_name" android:layout_marginBottom="30dp" android:layout_marginEnd="20dp"/>

    <TextView
        android:text="@string/password" android:layout_below="@id/tv_label_name"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_label_pwd"/>

    <EditText
        android:layout_width="100dp" android:layout_height="wrap_content"
        android:inputType="text" android:layout_toEndOf="@id/tv_label_name" android:id="@+id/et_name" />

    <EditText
        android:layout_width="100dp" android:layout_height="wrap_content"
        android:layout_below="@id/et_name" android:layout_alignEnd="@id/et_name"
        android:inputType="numberPassword" android:id="@+id/et_pwd"/>

    <Button
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/btn_login" android:text="@string/login"
        android:layout_below="@id/et_pwd" android:layout_marginTop="10dp"/>
</RelativeLayout>